--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 40px auto;
-            max-width: 650px;
+            max-width: 750px;
             line-height: 1.6;
             font-size: 18px;
             color: #444;
@@ -23,6 +23,10 @@
 
         table {
             width: 100%;
+        }
+
+        table td {
+            width: 50%;
         }
 
         td:nth-child(even) {
@@ -45,14 +49,14 @@
             Hello I am <em>Souvik Dey</em><br>
             a Full Stack Developer based in India.
         </h1>
-        <aside>I am an experienced Full Stack Developer with almost 5 years of expertise. I have a strong history of
+        <aside>With almost 5 years of expertise I have a strong history of
             developing large-scale, high-performance systems, focusing on creating robust, low-latency, and
             high-throughput applications. My skills encompass both frontend and backend development, making me highly
             capable in SaaS product engineering. I am dedicated to delivering top-tier engineering, following industry
             best practices like the 12-factor app principles and 5 Nines of Uptime to optimise systems for performance,
             scalability, and maintainability.</aside>
     </header>
-    <h2>PROJECTS</h2>
+    <h2>MY SOLO VENTURES</h2>
     <hr>
     <h3>An Intra Social Media Platform | <em>GraphQL, WebSockets, AWS, PostGreSQL, Django, Python, React</em></h3>
     <ul>
