updt: added the dark mode functionality, so used some of javascript as well

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Souvik Dey</title>
     <style>
+        :root {
+            --background: #ffffff;
+            --foreground: #444444;
+        }
+
         body {
             margin: 40px auto;
             max-width: 650px;
             line-height: 1.6;
-            font-size: 18px;
-            color: #444;
+            color: var(--foreground);
+            background-color: var(--background);
             padding: 0 10px
+        }
+
+        a {
+            color: #5FBB97;
+            text-decoration: none;
         }
 
         h1,
@@ -21,8 +31,18 @@
             line-height: 1.2
         }
 
+        p,
+        li,
+        aside {
+            font-size: 1rem;
+        }
+
         table {
             width: 100%;
+        }
+
+        table td {
+            width: 50%;
         }
 
         td:nth-child(even) {
@@ -34,34 +54,98 @@
         }
 
         button {
-            padding: 0.5rem 1rem;
+            padding: 0.25rem 0.75rem;
         }
     </style>
+    <script>
+        function onmount() {
+            fixmode()
+        }
+        function fixmode() {
+            let mode = localStorage.getItem("mode")
+            let togglebtn = document.getElementById('toggle-mode-btn');
+            togglebtn.innerText = mode === "dark" ? "light" : "dark";
+            if (mode === "dark") {
+                document.documentElement.style.setProperty('--background', '#1f1f20');
+                document.documentElement.style.setProperty('--foreground', '#fefaee');
+            }
+            else {
+                document.documentElement.style.setProperty('--background', '#ffffff');
+                document.documentElement.style.setProperty('--foreground', '#444444');
+            }
+        }
+        function toggleMode() {
+            let mode = localStorage.getItem("mode")
+            localStorage.setItem("mode", mode === "dark" ? "light" : "dark")
+            fixmode()
+        }
+    </script>
 </head>
 
-<body>
+<body onload="onmount()">
+    <div style="display: flex; justify-content: space-between;">
+        <button id="toggle-mode-btn" onclick="toggleMode()">mode</button>
+        <div>
+            <a target="_blank" href="https://www.linkedin.com/in/savhere/">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1.5em"
+                    width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
+                    </path>
+                </svg>
+            </a>
+            <a target="_blank" href="https://github.com/ami-souvik">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1.4em"
+                    width="1.4em" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                    </path>
+                </svg>
+            </a>
+            <a href="mailto:dsouvik141@gmail.com">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.5em"
+                    width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                    <path fill="none" d="M0 0h24v24H0z"></path>
+                    <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10h5v-2h-5c-4.34 0-8-3.66-8-8s3.66-8 8-8 8 3.66 8 8v1.43c0 .79-.71 1.57-1.5 1.57s-1.5-.78-1.5-1.57V12c0-2.76-2.24-5-5-5s-5 2.24-5 5 2.24 5 5 5c1.38 0 2.64-.56 3.54-1.47.65.89 1.77 1.47 2.96 1.47 1.97 0 3.5-1.6 3.5-3.57V12c0-5.52-4.48-10-10-10zm0 13c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z">
+                    </path>
+                </svg>
+            </a>
+            <a>
+                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true"
+                    height="1.6em" width="1.6em" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z">
+                    </path>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <hr>
     <header>
         <h1>
-            Hello I am <em>Souvik Dey</em><br>
-            a Full Stack Developer based in India.
+            Hello I am <em>Souvik Dey</em>
         </h1>
-        <aside>I am an experienced Full Stack Developer with almost 5 years of expertise. I have a strong history of
-            developing large-scale, high-performance systems, focusing on creating robust, low-latency, and
-            high-throughput applications. My skills encompass both frontend and backend development, making me highly
-            capable in SaaS product engineering. I am dedicated to delivering top-tier engineering, following industry
-            best practices like the 12-factor app principles and 5 Nines of Uptime to optimise systems for performance,
-            scalability, and maintainability.</aside>
+        <h2>A Full Stack Developer based in India.</h2>
+        <aside>With almost 5 years of expertise I have a strong history of developing large-scale, high-performance
+            systems, focusing on creating robust, low-latency, and high-throughput applications. My skills encompass
+            both frontend and backend development, making me highly capable in SaaS product engineering. I am dedicated
+            to delivering top-tier engineering, following industry best practices like the 12-factor app principles and
+            5 Nines of Uptime to optimise systems for performance, scalability, and maintainability.</aside>
     </header>
     <h2>PROJECTS</h2>
     <hr>
     <h3>An Intra Social Media Platform | <em>GraphQL, WebSockets, AWS, PostGreSQL, Django, Python, React</em></h3>
+    <img src="./intrasocial.png" style="width: 100%; max-width: 650px;">
     <ul>
-        <li>Developed a fully functional social media platform with features including user profiles, posts, comments,
+        <li>Developed a fully functional social media platform with features including user profiles, posts,
+            comments,
             likes, notifications, and messaging features.</li>
         <li>Designed and optimised the backend architecture for high performance, scalability, and security.</li>
         <li>Implemented GraphQL for efficient and flexible data querying and developed real-time chat functionality
             using WebSocket APIs.</li>
-        <li>Deployed and managed the platform on AWS, ensuring reliable uptime, load balancing, and efficient resource
+        <li>Deployed and managed the platform on AWS, ensuring reliable uptime, load balancing, and efficient
+            resource
             management.</li>
     </ul>
     <h2>EXPERIENCE</h2>
