updt: changed font families

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Souvik Dey</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <style>
         :root {
             --background: #ffffff;
@@ -20,14 +25,33 @@
             padding: 0 10px
         }
 
+        /* font family */
+        h1,
+        h2,
+        h3 {
+            font-family: "Ubuntu", system-ui;
+        }
+
+        a,
+        p,
+        li,
+        aside,
+        td {
+            font-family: "PT Serif", system-ui;
+        }
+
         a {
             color: #5FBB97;
             text-decoration: none;
         }
 
-        h1,
+        h1 {
+            font-size: 2.5em;
+        }
+
         h2,
         h3 {
+            font-weight: 800;
             line-height: 1.2
         }
 
@@ -35,6 +59,7 @@
         li,
         aside {
             font-size: 1rem;
+            font-weight: 300;
         }
 
         table {
@@ -128,9 +153,9 @@
     <hr>
     <header>
         <h1>
-            Hello I am <em>Souvik Dey</em>
+            Souvik Dey
         </h1>
-        <h2>A Full Stack Developer based in India.</h2>
+        <h2>Full Stack Developer based in India.</h2>
         <aside>With almost 5 years of expertise I have a strong history of developing large-scale, high-performance
             systems, focusing on creating robust, low-latency, and high-throughput applications. My skills encompass
             both frontend and backend development, making me highly capable in SaaS product engineering. I am dedicated
@@ -140,7 +165,7 @@
     <h2>MY SOLO VENTURES</h2>
     <hr>
     <h3>An Intra Social Media Platform | <em>GraphQL, WebSockets, AWS, PostGreSQL, Django, Python, React</em></h3>
-    <img src="./intrasocial.png" style="width: 100%; max-width: 650px;">
+    <img src="./intrasocial.png" style="width: 100%; max-width: 750px;">
     <ul>
         <li>Developed a fully functional social media platform with features including user profiles, posts,
             comments,
@@ -157,7 +182,7 @@
     <table>
         <tr>
             <td>
-                <strong>Company</strong><br><em>Senior Software Engineer</em>
+                <strong>CloudKaptan Consultancy Services</strong><br><em>Senior Software Engineer</em>
             </td>
             <td><em>January 2020 - April 2024</em>
             </td>
@@ -185,7 +210,7 @@
         <li>Contributed to the optimization of cloud-deployed platforms, ensuring high performance and scalability.
         </li>
     </ul>
-    <h2>EDUCATION</h2>
+    <h2>CREDENTIALS</h2>
     <hr>
     <table>
         <tr>
